lab4/src/main/java/com/example/lab4/errors/PreferenceNotExist.java
package com.example.lab4.errors;

public class PreferenceNotExist extends RuntimeException {
    String preferenceId;
    public PreferenceNotExist(String preferenceId) {
        super("preference not exist");
        this.preferenceId = preferenceId;
    }

    public String getPreferenceId() {
        return preferenceId;
    }
}
